Fix for login modal z-index

--- a/src/assets/styles/cmps/_LoginSignup.scss
+++ b/src/assets/styles/cmps/_LoginSignup.scss
@@ -9,7 +9,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 1;
+  z-index: 11;
 
   .footer-btn {
     display: flex;
@@ -98,7 +98,7 @@
   width: 100vw;
   height: 100vh;
   background-color: #00000065;
-  // opacity: 0.5;
+  z-index: 10;
 }
 
 // LoginModal Divier
